static/styles/vars.css
:root {
	/* LAYOUT */
	/* SECTIONS */
	--sections-padding: clamp(40px, 4vmax, 90px);

	/* MAIN SECTION */
	--max-left-section-width: 279px;
	--min-left-section-width: 215px;
	--left-section-span-height: 56px;

	/* CONTENT SECTION */
	--max-center-section-width: 562px;
	--min-center-section-width: 407px;

	/* SECONDARY SECTION */
	--max-right-section-width: 279px;
	--min-right-section-width: 215px;

	/* MAIN PAGE SIZES */
	--initial-padding-top: 50px;
	--initial-padding-on-the-sides: 70px;
	--body-padding: var(--initial-padding-top) var(--initial-padding-on-the-sides)
		0;

	--max-content-width: 1300px;
	--min-content-width: calc(
		var(--min-left-section-width) + var(--min-center-section-width) +
			var(--min-right-section-width)
	);

	/* TYPOGRAPHY */
	/* MAIN TEXT */
	--font-main-family: 'Gilroy', Tahoma, sans-serif;
	--font-main-weight: 300;
	--font-size-main: clamp(12px, 2vw, 16px);

	/* HEADING */
	--font-heading-weight: 800;
	--font-heading-size: clamp(20px, 2vw, 25px);

	/* MENUS */
	--font-menu-weight: 800;
	--font-menu-heading-weight: 300;

	--font-main-menu-size: 18px;
	--font-main-menu-heading-size: 18px;

	--font-second-menu-size: 16px;
	--font-second-menu-heading-size: 18px;

	/* FOOTER */
	--year-font-size: 18px;
	--copyright-font-size: 11px;

	/* INPUTS */
	--buttons-text-size: 14px;
	--labels-text-size: 12px;

	/* TEXT LOGO */
	--logo-font-size: 30px;

	/* OTHER */
	--font-bold-weight: 800;

	/* OTHER COLORS */
	--color-gray: #d9d9d9;
	--color-red: #ffe1e1;
	--color-green: #eeffe1;
	--color-black: #1a1a1a;
	--color-white: #ffffff;
}

/* RESIZE FONT */
@media (width <= 1018px) {
	:root {
		--initial-padding-top: 25px;
		--sections-padding: 0;
		--max-content-width: 100%;
		/* MAIN SECTION */
		--max-left-section-width: 100%;
		--min-left-section-width: unset;

		/* CONTENT SECTION */
		--max-center-section-width: 100%;
		--min-center-section-width: unset;

		/* SECONDARY SECTION */
		--max-right-section-width: 100%;
		--min-right-section-width: unset;

		/* FONTS */
		--font-main-menu-size: 14px;
	}
}

@media screen and (max-width: 500px) {
	:root {
		--initial-padding-on-the-sides: 15px;
	}
}

